--- a/config/storage.yml
+++ b/config/storage.yml
@@ -1,18 +1,30 @@
 test:
-  service: Disk
-  root: <%= Rails.root.join("tmp/storage") %>
+  service: S3
+  access_key_id: test
+  secret_access_key: test
+  region: us-east-1
+  bucket: cfa-aistudio-asap-pdf
+  endpoint: http://localhost:4566
+  force_path_style: true
+  versioning: enabled
 
-local:
-  service: Disk
-  root: <%= Rails.root.join("storage") %>
+development:
+  service: S3
+  access_key_id: test
+  secret_access_key: test
+  region: us-east-1
+  bucket: cfa-aistudio-asap-pdf
+  endpoint: http://localhost:4566
+  force_path_style: true
+  versioning: enabled
 
-# Use bin/rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
-# amazon:
-#   service: S3
-#   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
-#   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-#   region: us-east-1
-#   bucket: your_own_bucket-<%= Rails.env %>
+production:
+  service: S3
+  access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
+  secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
+  region: us-east-1
+  bucket: cfa-aistudio-asap-pdf
+  versioning: enabled
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
