--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,12 +25,19 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
+    - name: Debug OIDC claims
+      run: |
+        echo "GitHub repository: ${{ github.repository }}"
+        echo "GitHub ref: ${{ github.ref }}"
+        echo "GitHub SHA: ${{ github.sha }}"
+
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
         role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
         aws-region: ${{ env.AWS_REGION }}
         audience: sts.amazonaws.com
+        role-duration-seconds: 900 # 15 minutes
 
     - name: Login to Amazon ECR
       id: login-ecr
