--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,9 +76,61 @@ jobs:
         image: ${{ steps.build-image.outputs.image }}
 
     - name: Deploy Amazon ECS task definition
+      id: deploy
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
         task-definition: ${{ steps.task-def.outputs.task-definition }}
         service: ${{ env.ECS_SERVICE }}
         cluster: ${{ env.ECS_CLUSTER }}
         wait-for-service-stability: true
+
+    - name: Debug deployment failure
+      if: failure() && steps.deploy.outcome == 'failure'
+      run: |
+        echo "=== Fetching ECS Service Events ==="
+        aws ecs describe-services \
+          --cluster ${{ env.ECS_CLUSTER }} \
+          --services ${{ env.ECS_SERVICE }} \
+          --query 'services[0].events[0:5]'
+
+        echo "=== Fetching Latest Task Info ==="
+        TASK_ARN=$(aws ecs list-tasks \
+          --cluster ${{ env.ECS_CLUSTER }} \
+          --service-name ${{ env.ECS_SERVICE }} \
+          --desired-status RUNNING \
+          --query 'taskArns[0]' \
+          --output text)
+
+        if [ ! -z "$TASK_ARN" ]; then
+          echo "Latest task: $TASK_ARN"
+          aws ecs describe-tasks \
+            --cluster ${{ env.ECS_CLUSTER }} \
+            --tasks $TASK_ARN \
+            --query 'tasks[0].{lastStatus:lastStatus,desiredStatus:desiredStatus,stoppedReason:stoppedReason,containers:containers[*].{name:name,lastStatus:lastStatus,reason:reason,exitCode:exitCode}}'
+
+          echo "=== Container Logs ==="
+          TASK_ID=$(echo $TASK_ARN | awk -F'/' '{print $3}')
+          aws logs get-log-events \
+            --log-group-name /ecs/asap-pdf-production \
+            --log-stream-name web/$TASK_ID \
+            --limit 50 \
+            --query 'events[*].message'
+        else
+          echo "No running tasks found"
+
+          echo "=== Checking Stopped Tasks ==="
+          STOPPED_TASK=$(aws ecs list-tasks \
+            --cluster ${{ env.ECS_CLUSTER }} \
+            --service-name ${{ env.ECS_SERVICE }} \
+            --desired-status STOPPED \
+            --query 'taskArns[0]' \
+            --output text)
+
+          if [ ! -z "$STOPPED_TASK" ]; then
+            echo "Latest stopped task: $STOPPED_TASK"
+            aws ecs describe-tasks \
+              --cluster ${{ env.ECS_CLUSTER }} \
+              --tasks $STOPPED_TASK \
+              --query 'tasks[0].{lastStatus:lastStatus,stoppedReason:stoppedReason,containers:containers[*].{name:name,lastStatus:lastStatus,reason:reason,exitCode:exitCode}}'
+          fi
+        fi
