--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -78,13 +78,26 @@ jobs:
     - name: Deploy Amazon ECS task definition
       id: deploy
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+      timeout-minutes: 5
       with:
         task-definition: ${{ steps.task-def.outputs.task-definition }}
         service: ${{ env.ECS_SERVICE }}
         cluster: ${{ env.ECS_CLUSTER }}
         wait-for-service-stability: true
+        wait-for-minutes: 3
 
     - name: Debug deployment failure
+      if: failure() && steps.deploy.outcome == 'failure'
+      uses: aws-actions/configure-aws-credentials@v4
+      with:
+        role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+        aws-region: ${{ env.AWS_REGION }}
+        audience: "sts.amazonaws.com"
+        role-session-name: "GitHubActions-Debug-${{ github.run_id }}"
+        mask-aws-account-id: false
+        role-duration-seconds: 900
+
+    - name: Fetch deployment debug info
       if: failure() && steps.deploy.outcome == 'failure'
       run: |
         echo "=== Fetching ECS Service Events ==="
