ASAP-19 Adding tooling for faking lambda locally.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "4566:4566"  # LocalStack edge port
     environment:
-      - SERVICES=s3
+      - SERVICES=s3,lambda,logs,secretsmanager
       - AWS_DEFAULT_REGION=us-east-1
       - DOCKER_HOST=unix:///var/run/docker.sock
     volumes:
@@ -17,12 +17,27 @@ services:
       interval: 5s
       timeout: 5s
       retries: 3
-
   setup:
     image: amazon/aws-cli:latest
+    container_name: asap_setup
+    environment:
+      - AWS_REGION=us-east-1
+      - AWS_ACCESS_KEY_ID=none
+      - AWS_SECRET_ACCESS_KEY=none
     volumes:
       - ./bin/setup-localstack:/setup-localstack
     entrypoint: ["/bin/bash", "/setup-localstack"]
+    depends_on:
+      localstack:
+        condition: service_healthy
+  lambda_summary:
+    build:
+      context: ./python_components/summary
+    container_name: lambda_summary
+    ports:
+      - "9000:8080"
+    environment:
+      - ASAP_LOCAL_MODE=True
     depends_on:
       localstack:
         condition: service_healthy
