--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.12",
     "autoprefixer": "^10.4.20",
-    "daisyui": "^5.0.0-beta.8",
+    "daisyui": "^4.12.23",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.1"
   }
