--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,7 +72,7 @@ jobs:
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
         task-definition: ${{ env.ECS_TASK_DEFINITION }}
-        container-name: web
+        container-name: app
         image: ${{ steps.build-image.outputs.image }}
 
     - name: Deploy Amazon ECS task definition
@@ -125,7 +125,7 @@ jobs:
           TASK_ID=$(echo $TASK_ARN | awk -F'/' '{print $3}')
           aws logs get-log-events \
             --log-group-name /ecs/asap-pdf-production \
-            --log-stream-name web/$TASK_ID \
+            --log-stream-name app/$TASK_ID \
             --limit 50 \
             --query 'events[*].message'
         else
