works on my machine now

--- a/.gitignore
+++ b/.gitignore
@@ -148,9 +148,7 @@ terraform.tfstate
 terraform.tfstate.backup
 terraform.tfvars
 
-python_components/config.json
+python_components/*/config.json
 db/schema.rb
-
-python_components/config.json
 
 cline_docs
