--- a/python_components/summary/Dockerfile
+++ b/python_components/summary/Dockerfile
@@ -1,12 +1,13 @@
 FROM public.ecr.aws/lambda/python:3.12
 
-# Copy requirements.txt
+# Copy requirements.txt & config.json
 COPY requirements.txt ${LAMBDA_TASK_ROOT}
+COPY config.json ${LAMBDA_TASK_ROOT}
 
 # Install the specified packages
 RUN dnf install poppler-utils -y &&\
-    pip install -r requirements.txt &&\
-    mkdir ${LAMBDA_TASK_ROOT}/data
+  pip install -r requirements.txt &&\
+  mkdir ${LAMBDA_TASK_ROOT}/data
 
 # Copy function code
 COPY lambda_function.py ${LAMBDA_TASK_ROOT}
