--- a/.gitignore
+++ b/.gitignore
@@ -147,6 +147,8 @@ TODO.md
 terraform.tfstate
 terraform.tfstate.backup
 terraform.tfvars
+
+python_components/*/config.json
 db/schema.rb
 
 cline_docs
