--- a/.github/workflows/python_components.yml
+++ b/.github/workflows/python_components.yml
@@ -1,4 +1,4 @@
-name: Lint and Sort
+name: Python Component Linting
 
 on:
   push:
@@ -24,7 +24,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        if [ -f /python_components/requirements.txt ]; then pip install -r /python_components/requirements.txt; fi
+        if [ -f ./python_components/requirements.txt ]; then pip install -r ./python_components/requirements.txt; fi
     - name: Run Linting
       run: |
-        /python_components/run_linting.sh
+        ./python_components/run_linting.sh
