--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,3 +44,6 @@ jobs:
         run: |
           bundle exec rails db:create
           bundle exec rails db:migrate
+
+      - name: Run Rspec
+        run: bundle exec rspec
