Try sending psql string.

--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -33,6 +33,8 @@ jobs:
           bundler-cache: true
 
       - name: Setup database
+        env:
+          DATABASE_URL: postgres://postgres:postgres@localhost:5432
         run: bin/rails db:migrate
 
       - name: Run tests
