we're not using s3 yet so don't let s3 versioning break rspec on github

--- a/config/storage.yml
+++ b/config/storage.yml
@@ -1,22 +1,10 @@
-test:
-  service: S3
-  access_key_id: test
-  secret_access_key: test
-  region: us-east-1
-  bucket: cfa-aistudio-asap-pdf
-  endpoint: http://localhost:4566
-  force_path_style: true
-  versioning: enabled
+local:
+  service: Disk
+  root: <%= Rails.root.join("storage") %>
 
-development:
-  service: S3
-  access_key_id: test
-  secret_access_key: test
-  region: us-east-1
-  bucket: cfa-aistudio-asap-pdf
-  endpoint: http://localhost:4566
-  force_path_style: true
-  versioning: enabled
+test:
+  service: Disk
+  root: <%= Rails.root.join("tmp/storage") %>
 
 production:
   service: S3
@@ -24,23 +12,3 @@ production:
   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
   region: us-east-1
   bucket: cfa-aistudio-asap-pdf
-  versioning: enabled
-
-# Remember not to checkin your GCS keyfile to a repository
-# google:
-#   service: GCS
-#   project: your_project
-#   credentials: <%= Rails.root.join("path/to/gcs.keyfile") %>
-#   bucket: your_own_bucket-<%= Rails.env %>
-
-# Use bin/rails credentials:edit to set the Azure Storage secret (as azure_storage:storage_access_key)
-# microsoft:
-#   service: AzureStorage
-#   storage_account_name: your_account_name
-#   storage_access_key: <%= Rails.application.credentials.dig(:azure_storage, :storage_access_key) %>
-#   container: your_container_name-<%= Rails.env %>
-
-# mirror:
-#   service: Mirror
-#   primary: local
-#   mirrors: [ amazon, google, microsoft ]
